<resources>
    <string name="app_name">Neobis_Android_Chapter7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start">Начать пользоваться</string>
    <string name="text_smile">Смейся\nи улыбайся\nкаждый день"</string>
    <string name="text_account">Есть аккаунт? Войти</string>
    <string name="registration">Регистрация</string>
    <string name="text_alert">Мы выслали еще одно письмо\n на указанную тобой почту\n %s </string>
    <string name="button_close">Понятно!!1!</string>
    <string name="text_teacher">Твой личный репетитор</string>
    <string name="text_title">Lorby</string>
    <string name="editText_login">Введи туда-сюда логин</string>
    <string name="text_welcom">Вэлком бэк!</string>
    <string name="text_no_account">У меня еще нет аккаунта</string>
    <string name="text_exit">Выйти</string>
    <string name="text_create_acc">Создать аккаунт\n Lorby</string>
    <string name="text_alert_spam">Не забудь проверить\n ящик “Спам”!11!!!!</string>
    <string name="text_exactly_exit">Точно выйти?</string>
    <string name="text_exit_alert">Выйти?</string>
    <string name="button_no">Нет, остаться</string>
    <string name="button_yes">Да, точно</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="helperText1">• От 8 до 15 символов ❌</string>
    <string name="helperText2">• Строчные и прописные буквы</string>
    <string name="helperText3">• Минимум 1 цифра ✅</string>
    <string name="helperText4">• Минимум 1 спецсимвол (!, \", #, $...)</string>
    <string name="text_welcome_letter">Выслали письмо со ссылкой\n для завершения регистрации\n на %s</string>
    <string name="text_letter_no">Если письмо не пришло, не спеши\n ждать совиную почту - лучше проверь\n ящик “Спам”\n\n (´｡• ω •｡`)</string>
</resources>